--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,25 @@
 {
-    "name": ":vendor/:package_name",
+    "name": "billing/billing",
     "type": "library",
-    "description": ":package_description",
+    "description": "Automated billing",
     "keywords": [
-        ":vendor",
-        ":package_name"
+        "billing",
+        "billing"
     ],
-    "homepage": "https://github.com/:vendor/:package_name",
+    "homepage": "https://github.com/billing/billing",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
-            "homepage": ":author_website",
+            "name": "",
+            "email": "diegoalvarez17@gmail.com",
+            "homepage": "http://diegonalvarez.github.io/",
             "role": "Developer"
         }
     ],
     "require": {
-        "php" : "~5.6|~7.0"
+        "php" : "~5.6|~7.0",
+        "omnipay/authorizenet": "~2.0",
+        "rtconner/freshbooks-api": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0||~5.0",
@@ -25,12 +27,12 @@
     },
     "autoload": {
         "psr-4": {
-            ":vendor\\:package_name\\": "src"
+            "League\\Billing\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            ":vendor\\:package_name\\": "tests"
+            "League\\Billing\\": "tests"
         }
     },
     "scripts": {
